--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <title>SAT</title>
+    <title>SATMQTT</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -22,9 +22,6 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <script src="js/services.js"></script>
     <script src="http://www.hivemq.com/demos/websocket-client/js/mqttws31.js" type="text/javascript"></script>
     <script type="text/javascript">
     
@@ -47,37 +44,38 @@ var client = new Messaging.Client("test.mosquitto.org", 8080, "myclientid_" + pa
      onFailure: function (message) {
        // $('#estado').text('Error de conexion:');
         // alert("Connection failed: " + message.errorMessage);
+        alert("no conectado mqtt");
      }
  };
- client.connect(options);
-alert("Device Ready")
-var push = PushNotification.init({ "android": {"senderID": "195582634716"},
-"ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
+//  client.connect(options);
+// alert("Device Ready")
+// var push = PushNotification.init({ "android": {"senderID": "195582634716"},
+// "ios": {"alert": "true", "badge": "true", "sound": "true"}, "windows": {} } );
 
-push.on('registration', function(data) {
-  alert(data.registrationId);
-  var men = new Messaging.Message(data.registrationId));
-     men.destinationName = 'sat/gcm';
-     men.qos = 2;
-     client.send(men);
-console.log(data.registrationId);
-$("#gcm_id").html(data.registrationId);
-});
+// push.on('registration', function(data) {
+//   alert(data.registrationId);
+//   var men = new Messaging.Message(data.registrationId));
+//      men.destinationName = 'sat/gcm';
+//      men.qos = 2;
+//      client.send(men);
+// console.log(data.registrationId);
+// $("#gcm_id").html(data.registrationId);
+// });
 
-push.on('notification', function(data) {
-console.log(data.message);
-alert(data.title+" Message: " +data.message);
-// data.title,
-// data.count,
-// data.sound,
-// data.image,
-// data.additionalData
-});
+// push.on('notification', function(data) {
+// console.log(data.message);
+// alert(data.title+" Message: " +data.message);
+// // data.title,
+// // data.count,
+// // data.sound,
+// // data.image,
+// // data.additionalData
+// });
 
-push.on('error', function(e) {
-console.log(e.message);
-});
-}
+// push.on('error', function(e) {
+// console.log(e.message);
+// });
+// }
 
 
 </script>
