--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ var client = new Messaging.Client("test.mosquitto.org", 8080, "myclientid_" + pa
         alert("no conectado mqtt");
      }
  };
+ alert("aca");
 //  client.connect(options);
 // alert("Device Ready")
 // var push = PushNotification.init({ "android": {"senderID": "195582634716"},
