--- a/index.html
+++ b/index.html
@@ -27,26 +27,26 @@
     
 document.addEventListener("deviceready",onDeviceReady,false);
 function onDeviceReady(){
-var client = new Messaging.Client("test.mosquitto.org", 8080, "myclientid_" + parseInt(Math.random() * 100, 10));
-//Connect Options
+// var client = new Messaging.Client("test.mosquitto.org", 8080, "myclientid_" + parseInt(Math.random() * 100, 10));
+// //Connect Options
  
-    var options = {
-     timeout: 3,
-     //Gets Called if the connection has sucessfully been established
-     onSuccess: function () {
-         //alert("Connected");
-         // $('#estado').text('Conectado');
-         alert("Conectado mqtt");
-         client.subscribe('/world', {qos: 2});
+//     var options = {
+//      timeout: 3,
+//      //Gets Called if the connection has sucessfully been established
+//      onSuccess: function () {
+//          //alert("Connected");
+//          // $('#estado').text('Conectado');
+//          alert("Conectado mqtt");
+//          client.subscribe('/world', {qos: 2});
          
-     },
-     //Gets Called if the connection could not be established
-     onFailure: function (message) {
-       // $('#estado').text('Error de conexion:');
-        // alert("Connection failed: " + message.errorMessage);
-        alert("no conectado mqtt");
-     }
- };
+//      },
+//      //Gets Called if the connection could not be established
+//      onFailure: function (message) {
+//        // $('#estado').text('Error de conexion:');
+//         // alert("Connection failed: " + message.errorMessage);
+//         alert("no conectado mqtt");
+//      }
+//  };
  alert("aca");
 //  client.connect(options);
 // alert("Device Ready")
